name:                monad-fork2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/meln5674/monad-fork2#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          meln5674@kettering.edu
copyright:           2017 Andrew Melnick
category:            Control
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Control.Monad.Fork
  build-depends:       base >= 4.7 && < 5, mtl, transformers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/meln5674/monad-fork2
